--- a/angular.json
+++ b/angular.json
@@ -28,8 +28,8 @@
             ],
             "styles": [
 
-              "src/styles.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "src/styles.css"
+            
               
 
             ],
